# jubilant_adapters

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  tox.ini
jubilant_adapters/: __init__.py  adapters.py  typedefs.py  utils.py
tests/: test_adapters.py
